--- a/addons/BioTools/SConstruct
+++ b/addons/BioTools/SConstruct
@@ -13,9 +13,11 @@ env = SConscript("godot-cpp/SConstruct")
 # - LINKFLAGS are for linking flags
 
 # tweak this if you want to use different folders, or more folders, to store your source code in.
-env.Append(CPPPATH=["src/", "."])
+env.Append(CPPPATH=["src/", ".", "src/Common/", "src/PDB/"])
 
 sources = [
+        Glob("src/PDB/cPDBData.cpp"),
+        Glob("src/PDB/cPDBVis.cpp"),
         #Extension classes
         Glob("src/extension_registration.cpp"),
         ]
